--- a/views/style.css
+++ b/views/style.css
@@ -13,12 +13,13 @@
 }
 
 form {
-  background-color: white;
-  color: #444;
   width: 100%;
   max-width: 400px;
   padding: 40px;
   border-radius: 5px;
+  color: #444;
+  background-color: #fff;
+  border: 1px solid #ececec;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
